-Renamed Container Class to EventList -eventListAdapter is somewhat Complete -Modified Event Class (arrays removed, rewrote functions) -Modified Date Class (removed some functions, added some) -EventList class was modified (commented replication code for now) -Finalized Event_View Layout (XML) -Added Divider to main activity Layout

--- a/res/layout/activity_view_schedule.xml
+++ b/res/layout/activity_view_schedule.xml
@@ -34,6 +34,7 @@
         android:id="@+id/eventViewGroup"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:longClickable="true">
-    </ListView>
+        android:longClickable="true"				    
+        android:divider="#C0C0C0"
+		android:dividerHeight="2sp"/>
 </LinearLayout>
