--- a/res/layout/event_view.xml
+++ b/res/layout/event_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 	<RadioGroup    
-	    	android:id="@+id/ratingRadioGroup"
+	    	android:id="@+id/timeGroup"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_marginTop="3dp"
@@ -16,23 +16,29 @@
 		        android:orientation="horizontal" >
 		
 					<TextView
-					    android:id="@+id/timeTextView"
+					    android:id="@+id/hr_tview"
 					    android:layout_width="wrap_content"
 					    android:layout_height="wrap_content"
 					    android:textSize="20sp"
 					    android:textStyle="bold"
 					    android:text="00"/>
 					<TextView
-					    android:id="@+id/timeTextView"
+					    android:id="@+id/semicolon"
 					    android:layout_width="wrap_content"
 					    android:layout_height="wrap_content"
-					    android:text=":00" />
+					    android:text=":" />
+					<TextView
+					    android:id="@+id/min_tview"
+					    android:layout_width="wrap_content"
+					    android:layout_height="wrap_content"
+					    android:text="00" />
 	    	</LinearLayout>
 
 		    <TextView
-		        android:id="@+id/am_pm_indicator"
-		        android:layout_width="fill_parent"
-		        android:paddingLeft="10dp"
+		        android:id="@+id/am_pm"
+		        android:layout_height="wrap_content"
+		        android:layout_width="wrap_content"
+		        android:paddingLeft="20dp"
 		        android:text="AM"
 		        android:textAlignment="6"
 		        android:textStyle="bold" />
@@ -40,22 +46,75 @@
 	    </RadioGroup>
 
 	    <RadioGroup
-	        android:id="@+id/ratingRadioGroup"
+	        android:id="@+id/maininfogroup"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_marginTop="8dp"
 	        android:layout_marginRight="2dp" >
 
 		    	<TextView
-			        android:id="@+id/TitleTextView"
-			        android:textStyle="bold"
-			        android:text="Event Title Here"
-			        android:textSize="16sp" />
+		    	    android:id="@+id/t_tview"
+		    	    android:layout_width="match_parent"
+		    	    android:layout_height="wrap_content"
+		    	    android:text="Event Title Here"
+		    	    android:textSize="16sp"
+		    	    android:textStyle="bold" />
 			    
 			    <TextView
-			        android:id="@+id/DescriptTextView"
+			        android:id="@+id/d_tview"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
 			        android:text="Some long description here yadadada dadadada dadadadadada dadadada"
 			        android:textSize="14sp" />
+			    
+			    <LinearLayout
+			        	android:paddingTop="5dp"
+			        	android:layout_width="wrap_content"
+				        android:layout_height="wrap_content"
+				        android:orientation="horizontal">
+					
+					    <TextView
+					        android:id="@+id/end_str"
+					        android:layout_width="wrap_content"
+					        android:layout_height="wrap_content"
+					        android:text="Ends: "
+					        android:textSize="14sp"
+					        android:textStyle="italic" />
+
+					    <TextView
+					        android:id="@+id/hr_eview"
+					        android:layout_width="wrap_content"
+					        android:layout_height="wrap_content"
+					        android:text="00"
+					        android:textSize="14sp"
+					        android:textStyle="italic" />
+					    
+					    <TextView
+					        android:id="@+id/t_semi"
+					        android:layout_width="wrap_content"
+					        android:layout_height="wrap_content"
+					        android:text=":"
+					        android:textSize="14sp"
+					        android:textStyle="italic" />
+					    
+
+					    <TextView
+					        android:id="@+id/min_eview"
+					        android:layout_width="wrap_content"
+					        android:layout_height="wrap_content"
+					        android:text="00"
+					        android:textSize="14sp"
+					        android:textStyle="italic" />
+					    
+					    <TextView
+					        android:id="@+id/e_am_pm"
+					        android:layout_width="wrap_content"
+					        android:layout_height="wrap_content"
+					        android:text=" AM"
+					        android:textSize="14sp"
+					        android:textStyle="bold" />
+					    
+			    </LinearLayout>
 	    </RadioGroup>
 
 </LinearLayout>
