--- a/res/layout/event_view.xml
+++ b/res/layout/event_view.xml
@@ -111,6 +111,7 @@
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"
 					        android:text=" AM"
+					        android:paddingLeft="5dp"
 					        android:textSize="14sp"
 					        android:textStyle="bold" />
 					    
