--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -38,6 +38,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:longClickable="true"				    
-        android:divider="#C0C0C0"
-		android:dividerHeight="2sp"/>
+        android:divider="#EEEEEE"
+		android:dividerHeight="1sp"/>
 </LinearLayout>
