--- a/res/menu/topbar.xml
+++ b/res/menu/topbar.xml
@@ -9,6 +9,7 @@
 		<menu>
 	    <item android:id="@+id/tb_sub_ev" android:showAsAction="always" android:title="@string/tb_aev"/>
 	    <item android:id="@+id/tb_sub_td" android:showAsAction="always" android:title="@string/tb_atd"/>
+	    <item android:id="@+id/tb_sub_qe" android:showAsAction="always" android:title="@string/tb_aqe"/>
 	    </menu>    
     </item>
 </menu>
