--- a/res/layout/creation_activity.xml
+++ b/res/layout/creation_activity.xml
@@ -10,6 +10,7 @@
 	    android:orientation="vertical" >
 
 	    <TextView
+	        android:paddingTop="15sp"
 	        android:id="@+id/ce_name"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
