--- a/res/layout/todo_view.xml
+++ b/res/layout/todo_view.xml
@@ -1,8 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
     
+    	<RadioGroup    
+	    	android:id="@+id/timeGroup"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:padding="8dp"
+	        android:layout_marginRight="5dp">
+		    <LinearLayout
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal" >
+		
+					<TextView
+					    android:id="@+id/hr_td"
+					    android:layout_width="wrap_content"
+					    android:layout_height="wrap_content"
+					    android:textSize="20sp"
+					    android:textStyle="bold"
+					    android:text="00"/>
+					<TextView
+					    android:id="@+id/semicolon"
+					    android:layout_width="wrap_content"
+					    android:layout_height="wrap_content"
+					    android:text=":" />
+					<TextView
+					    android:id="@+id/min_td"
+					    android:layout_width="wrap_content"
+					    android:layout_height="wrap_content"
+					    android:text="00" />
+	    	</LinearLayout>
+
+		    <TextView
+		        android:id="@+id/td_pm"
+		        android:layout_height="wrap_content"
+		        android:layout_width="wrap_content"
+		        android:paddingLeft="20dp"
+		        android:text="AM"
+		        android:textAlignment="6"
+		        android:textStyle="bold" />
+		    
+	    </RadioGroup>
+
+	    <RadioGroup
+	        android:id="@+id/maininfogroup"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="8dp"
+	        android:layout_marginRight="2dp" >
+
+	        <TextView
+	            android:paddingTop="2sp"
+	            android:id="@+id/td_tview"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:text="Event Title Here"
+	            android:textSize="16sp"
+	            android:textStyle="bold" />
+
+	    </RadioGroup>
 
 </LinearLayout>
