--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -22,7 +22,9 @@
 		android:layout_height="1dp"
 		android:background="@android:color/darker_gray"/>
     
-    <LinearLayout android:layout_weight=".4" 
+    <LinearLayout 
+        android:id="@+id/adjustableLayout"
+        android:layout_weight="0" 
 	    android:layout_height="fill_parent" 
 	    android:layout_width="fill_parent">
 	    <!--Use this Specific ListView element for event objects-->
@@ -33,6 +35,6 @@
 	        android:longClickable="true"				    
 	        android:divider="#EEEEEE"
 			android:dividerHeight="1sp"/>
-	    </LinearLayout>
+	</LinearLayout>
 	    
 </LinearLayout>
