--- a/res/layout/creation_activity.xml
+++ b/res/layout/creation_activity.xml
@@ -7,10 +7,11 @@
 	<LinearLayout
 	    android:id="@+id/linearlayout"
 	    android:paddingTop="1sp"
+	    android:divider="@drawable/divider"
 	    android:showDividers="middle"
-	    android:layout_width="match_parent"
+	    android:dividerPadding="22dp"
+	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:divider="@color/LightSteelBlue"
 	    android:orientation="vertical">
 
 	    <TextView
