--- a/res/layout/creation_activity.xml
+++ b/res/layout/creation_activity.xml
@@ -7,9 +7,6 @@
 	<LinearLayout
 	    android:id="@+id/linearlayout"
 	    android:paddingTop="1sp"
-	    android:divider="@drawable/divider"
-	    android:showDividers="middle"
-	    android:dividerPadding="22dp"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical">
@@ -45,14 +42,15 @@
 	        android:ems="10"
 	        android:hint="@string/desc_hint"
 	        android:inputType="textPersonName"
-	        android:imeOptions="actionDone" />
+	        android:imeOptions="actionDone" 
+	        android:paddingBottom="20sp"/>
 
 	    <TextView
 	        android:id="@+id/ce_sttv"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center"
-	        android:paddingTop="20sp"
+	        android:paddingTop="40dp"
 	        android:text="@string/ce_stime"
 	        android:textSize="20sp" />
 
@@ -61,7 +59,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center_horizontal"
-	        android:padding="30sp" />
+	        android:padding="10sp" />
 
 	    <TextView
 	        android:id="@+id/ce_ettv"
@@ -76,7 +74,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center_horizontal"
-	        android:padding="30sp" />
+	        android:padding="10sp" />
 
 	    <TextView
 	        android:id="@+id/ce_doe"
@@ -96,7 +94,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center"
-	        android:padding="30sp"
+	        android:padding="10sp"
 	        android:calendarViewShown="false" />
 	    
 	    <View 
@@ -128,7 +126,44 @@
 	            android:textOn="@string/ce_e_ala" />
 	    </LinearLayout>
 	    
-	    <!-- Add Color Selection Code -->
+	    <LinearLayout
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"
+	        android:gravity="center"
+	        android:orientation="vertical"
+	        android:paddingBottom="20dp" >
+	        
+	    <TextView
+	        android:id="@+id/color_text"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"
+	        android:text="@string/Color_Text"
+	        android:textSize="20sp"
+	        android:paddingBottom="20sp" />
+	        
+	    <com.larswerkman.holocolorpicker.ColorPicker
+	        android:id="@+id/picker"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"/>
+ 
+	    <com.larswerkman.holocolorpicker.SVBar
+	        android:id="@+id/svbar"
+	        android:layout_width="322dp"
+	        android:layout_height="112dp"
+	        android:layout_gravity="center"
+	        android:layout_margin="8dip"/>
+ 
+	    <com.larswerkman.holocolorpicker.OpacityBar
+	        android:id="@+id/opacitybar"
+	        android:layout_width="322dp"
+	        android:layout_height="112dp"
+	        android:layout_gravity="center"
+	        android:layout_margin="8dip"/>
+	    
+	    </LinearLayout>
 
 	    <Button
 	        android:id="@+id/ce_create"
