--- a/res/layout/td_activity.xml
+++ b/res/layout/td_activity.xml
@@ -82,7 +82,44 @@
 	            android:textOn="@string/ce_e_ala" />
 	    </LinearLayout>
 	    
-	    <!-- Add Color Selection Code -->
+	    <LinearLayout
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"
+	        android:gravity="center"
+	        android:orientation="vertical"
+	        android:paddingBottom="20dp" >
+	        
+	    <TextView
+	        android:id="@+id/color_text"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"
+	        android:text="@string/td_Color_Text"
+	        android:textSize="20sp"
+	        android:paddingBottom="20sp" />
+	        
+	    <com.larswerkman.holocolorpicker.ColorPicker
+	        android:id="@+id/picker"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"/>
+ 
+	    <com.larswerkman.holocolorpicker.SVBar
+	        android:id="@+id/svbar"
+	        android:layout_width="322dp"
+	        android:layout_height="112dp"
+	        android:layout_gravity="center"
+	        android:layout_margin="8dip"/>
+ 
+	    <com.larswerkman.holocolorpicker.OpacityBar
+	        android:id="@+id/opacitybar"
+	        android:layout_width="322dp"
+	        android:layout_height="112dp"
+	        android:layout_gravity="center"
+	        android:layout_margin="8dip"/>
+	    
+	    </LinearLayout>
 
 	    <Button
 	        android:id="@+id/td_create"
