--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -12,6 +12,7 @@
 	    <!--Use this Specific ListView element for todo objects-->
 	    <ListView
 	        android:id="@+id/todoViewGroup"
+	        android:cacheColorHint="@android:color/transparent"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:longClickable="true"
@@ -33,6 +34,7 @@
 	    <!--Use this Specific ListView element for event objects-->
 	    <ListView
 	        android:id="@+id/eventViewGroup"
+	        android:cacheColorHint="@android:color/transparent"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:longClickable="true"				    
