--- a/res/menu/topbar.xml
+++ b/res/menu/topbar.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- You must fill in the menu items here. -->
-    <item android:id="@+id/tb_month" android:showAsAction="always" android:title="@string/tb_month"></item>
+    <item android:id="@+id/tb_month" android:showAsAction="always" android:icon="@drawable/ic_action_event" android:title="@string/tb_month"></item>
     <item android:id="@+id/tb_date" android:showAsAction="always" android:title="@string/tb_date"/>
     
     <item android:id="@+id/tb_add"  android:showAsAction="always" android:title="@string/tb_add">
