--- a/res/layout/event_view.xml
+++ b/res/layout/event_view.xml
@@ -21,13 +21,16 @@
 					    android:layout_height="wrap_content"
 					    android:textSize="20sp"
 					    android:textStyle="bold"
+					    android:textColor="#000000"
 					    android:text="00"/>
 					<TextView
 					    android:id="@+id/semicolon"
 					    android:layout_width="wrap_content"
 					    android:layout_height="wrap_content"
+					    android:textColor="#000000"
 					    android:text=":" />
 					<TextView
+					    android:textColor="#000000"
 					    android:id="@+id/min_tview"
 					    android:layout_width="wrap_content"
 					    android:layout_height="wrap_content"
@@ -35,6 +38,7 @@
 	    	</LinearLayout>
 
 		    <TextView
+				android:textColor="#000000"
 		        android:id="@+id/am_pm"
 		        android:layout_height="wrap_content"
 		        android:layout_width="wrap_content"
@@ -53,6 +57,7 @@
 	        android:layout_marginRight="2dp" >
 
 		    	<TextView
+					android:textColor="#000000"
 		    	    android:id="@+id/t_tview"
 		    	    android:layout_width="match_parent"
 		    	    android:layout_height="wrap_content"
@@ -61,6 +66,7 @@
 		    	    android:textStyle="bold" />
 			    
 			    <TextView
+					android:textColor="#000000"
 			        android:id="@+id/d_tview"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
@@ -74,6 +80,7 @@
 				        android:orientation="horizontal">
 					
 					    <TextView
+					    	android:textColor="#000000"
 					        android:id="@+id/end_str"
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"
@@ -82,6 +89,7 @@
 					        android:textStyle="italic" />
 
 					    <TextView
+					   	 android:textColor="#000000"
 					        android:id="@+id/hr_eview"
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"
@@ -90,6 +98,7 @@
 					        android:textStyle="italic" />
 					    
 					    <TextView
+					   	 android:textColor="#000000"
 					        android:id="@+id/t_semi"
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"
@@ -99,6 +108,7 @@
 					    
 
 					    <TextView
+					    android:textColor="#000000"
 					        android:id="@+id/min_eview"
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"
@@ -107,6 +117,7 @@
 					        android:textStyle="italic" />
 					    
 					    <TextView
+					    android:textColor="#000000"
 					        android:id="@+id/e_am_pm"
 					        android:layout_width="wrap_content"
 					        android:layout_height="wrap_content"
