--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -17,7 +17,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:longClickable="true"
-	        android:divider="#EEEEEE"				    
+	        android:divider="#000000"				    
 			android:dividerHeight="1sp"/>
     </LinearLayout>
     
@@ -39,7 +39,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:longClickable="true"				    
-	        android:divider="#EEEEEE"
+	        android:divider="#000000"
 			android:dividerHeight="1sp"/>
 	</LinearLayout>
 	    
