--- a/res/menu/topbar.xml
+++ b/res/menu/topbar.xml
@@ -4,7 +4,7 @@
     <item android:id="@+id/tb_month" android:showAsAction="always" android:icon="@drawable/ic_action_event" android:title="@string/tb_month"></item>
     <item android:id="@+id/tb_date" android:showAsAction="always" android:title="@string/tb_date"/>
     
-    <item android:id="@+id/tb_add"  android:showAsAction="always" android:title="@string/tb_add">
+    <item android:id="@+id/tb_add"  android:showAsAction="always" android:icon="@drawable/ic_action_new_event" android:title="@string/tb_add">
 		<!--  Sub Menu for Adding Events and ToDos -->
 		<menu>
 	    <item android:id="@+id/tb_sub_ev" android:showAsAction="always" android:title="@string/tb_aev"/>
