--- a/res/layout/event_view.xml
+++ b/res/layout/event_view.xml
@@ -74,7 +74,7 @@
 			        android:textSize="14sp" />
 			    
 			    <LinearLayout
-			        	android:paddingTop="5dp"
+			        	android:padding="5dp"
 			        	android:layout_width="wrap_content"
 				        android:layout_height="wrap_content"
 				        android:orientation="horizontal">
