--- a/res/layout/creation_activity.xml
+++ b/res/layout/creation_activity.xml
@@ -173,6 +173,7 @@
 	    </LinearLayout>
 
 	    <Button
+	        android:paddingBottom="20sp"
 	        android:id="@+id/ce_create"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
