--- a/res/layout/td_activity.xml
+++ b/res/layout/td_activity.xml
@@ -10,7 +10,7 @@
 	    android:orientation="vertical" >
 
 	    <TextView
-	        
+	        android:textColor="#FFFFFF"
 	        android:id="@+id/td_name"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -28,6 +28,7 @@
 	        android:singleLine="true" />
 
 	    <TextView
+	        android:textColor="#FFFFFF"
 	        android:id="@+id/td_sttv"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
@@ -44,6 +45,7 @@
 	        android:padding="30sp" />
 
 	    <TextView
+	        android:textColor="#FFFFFF"
 	        android:id="@+id/td_doe"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
@@ -67,6 +69,7 @@
 	        android:padding="30sp" >
 
 	        <TextView
+	    	    android:textColor="#FFFFFF"
 	            android:id="@+id/td_alatv"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
@@ -92,6 +95,7 @@
 	        android:paddingBottom="20dp" >
 	        
 	    <TextView
+	        android:textColor="#FFFFFF"
 	        android:id="@+id/color_text"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
@@ -123,6 +127,7 @@
 	    </LinearLayout>
 
 	    <Button
+	        android:paddingBottom="20sp"
 	        android:id="@+id/td_create"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
