--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -17,8 +17,8 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:longClickable="true"
-	        android:divider="#000000"				    
-			android:dividerHeight="2sp"/>
+	        android:divider="@android:color/transparent"				    
+			android:dividerHeight="5sp"/>
     </LinearLayout>
     
    	<View
@@ -39,8 +39,8 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:longClickable="true"				    
-	        android:divider="#000000"
-			android:dividerHeight="2sp"/>
+	        android:divider="@android:color/transparent"
+			android:dividerHeight="5sp"/>
 	</LinearLayout>
 	    
 </LinearLayout>
