--- a/res/menu/settings_menu.xml
+++ b/res/menu/settings_menu.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:id="@+id/full_clear"
+      <item android:id="@+id/full_clear"
         android:title="@string/clear_all"/>
+      <item android:id="@+id/test_item"
+        android:title="@string/test_item"/>
 </menu>
