--- a/res/menu/option_menu.xml
+++ b/res/menu/option_menu.xml
@@ -2,8 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@+id/menu_remove"
-        android:title="@string/action_remove"/>
+        android:title="@string/action_remove"
+        android:showAsAction="always"/>
     <item
         android:id="@+id/menu_edit"
-        android:title="@string/action_edit"/>
+        android:title="@string/action_edit"
+        android:showAsAction="always"/>
 </menu>
