--- a/res/layout/creation_activity.xml
+++ b/res/layout/creation_activity.xml
@@ -132,6 +132,63 @@
 	            android:textOn="@string/ce_e_ala" />
 	    </LinearLayout>
 	    
+	    <LinearLayout 
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="horizontal">       
+	        <ToggleButton
+	            android:id="@+id/rp_sun"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/rp_sun"
+	            android:textOff="@string/rp_sun"
+	            android:textOn="@string/rp_sun" />
+	        <ToggleButton
+	            android:id="@+id/rp_mon"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/rp_mon"
+	            android:textOff="@string/rp_mon"
+	            android:textOn="@string/rp_mon" />	 
+	       <ToggleButton
+	            android:id="@+id/rp_tue"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/rp_tue"
+	            android:textOff="@string/rp_tue"
+	            android:textOn="@string/rp_tue" />	 
+	       <ToggleButton
+	            android:id="@+id/rp_wed"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/rp_wed"
+	            android:textOff="@string/rp_wed"
+	            android:textOn="@string/rp_wed" />	 
+	        <ToggleButton
+	            android:id="@+id/rp_thu"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/rp_thu"
+	            android:textOff="@string/rp_thu"
+	            android:textOn="@string/rp_thu" />	 
+	      <ToggleButton
+	            android:id="@+id/rp_fri"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/rp_fri"
+	            android:textOff="@string/rp_fri"
+	            android:textOn="@string/rp_fri" />	 
+	       <ToggleButton
+	            android:id="@+id/rp_sun"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/ce_alarm"
+	            android:textOff="@string/rp_sun"
+	            android:textOn="@string/rp_sun" />	 
+
+	            	    
+	    </LinearLayout>
+	    
 	    <LinearLayout
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
