--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -7,6 +7,7 @@
                 
     <LinearLayout 
         android:id="@+id/adjustableTodo"
+        android:orientation="vertical"
         android:layout_weight="1" 
 	    android:layout_height="match_parent" 
 	    android:layout_width="match_parent">
@@ -19,6 +20,13 @@
 	        android:longClickable="true"
 	        android:divider="@android:color/transparent"				    
 			android:dividerHeight="5sp"/>
+	    <ViewStub
+            android:id="@+id/empty_tdo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout="@layout/empty_todo" />
+	    
     </LinearLayout>
     
    	<View
@@ -31,7 +39,8 @@
         android:id="@+id/adjustableLayout"
         android:layout_weight=".4" 
 	    android:layout_height="match_parent" 
-	    android:layout_width="match_parent">
+	    android:layout_width="match_parent"
+	    android:orientation="vertical">
 	    <!--Use this Specific ListView element for event objects-->
 	    <ListView
 	        android:id="@+id/eventViewGroup"
@@ -41,6 +50,12 @@
 	        android:longClickable="true"				    
 	        android:divider="@android:color/transparent"
 			android:dividerHeight="5sp"/>
+	    <ViewStub
+            android:id="@+id/empty_event"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout="@layout/empty_event" />
 	</LinearLayout>
 	    
 </LinearLayout>
