--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -7,10 +7,10 @@
                 
     <LinearLayout 
         android:id="@+id/adjustableTodo"
-        android:orientation="vertical"
         android:layout_weight="1" 
 	    android:layout_height="match_parent" 
-	    android:layout_width="match_parent">
+	    android:layout_width="match_parent"
+	    android:orientation="vertical">
 	    <!--Use this Specific ListView element for todo objects-->
 	    <ListView
 	        android:id="@+id/todoViewGroup"
@@ -21,7 +21,7 @@
 	        android:divider="@android:color/transparent"				    
 			android:dividerHeight="5sp"/>
 	    <ViewStub
-            android:id="@+id/empty_tdo"
+            android:id="@+id/empty_todo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -37,7 +37,7 @@
    	<!--  Weight needs to be adjusted -->
     <LinearLayout 
         android:id="@+id/adjustableLayout"
-        android:layout_weight=".4" 
+        android:layout_weight=".4"  
 	    android:layout_height="match_parent" 
 	    android:layout_width="match_parent"
 	    android:orientation="vertical">
